# FHMake

./: CHANGELOG.md  DOCS.md  README.md  pyproject.toml  requirements.txt  requirements_optional.txt  setup.py
.github/workflows/: mirror-to-codeberg.yaml
DOCS/: index.md  readme.md
DOCS/fhmake/: audit.md  build.md  index.md  install.md  module.md  publish.md  utils.md
documentation/reference/: README.md
documentation/reference/fhmake/: audit.md  build.md  index.md  install.md  module.md  publish.md  utils.md
fhmake/: __init__.py  __main__.py  audit.py  build.py  install.py  publish.py  utils.py
readme-assets/terminal/: audit.txt
