[tool.poetry]
name = "fhmake"
version = "2022.0.2"
license = "mit"
description = "FredHappyface Makefile for python. build, install, publish or audit"
authors = ["FredHappyface"]
classifiers = [
	"Environment :: Console",
	"Environment :: MacOS X",
	"Environment :: Win32 (MS Windows)",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Security",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities"
]
homepage = "https://github.com/FHPythonUtils/FHMake"
repository = "https://github.com/FHPythonUtils/FHMake"
documentation = "https://github.com/FHPythonUtils/FHMake/blob/master/README.md"
readme = "README.md"

[tool.poetry.scripts]
fhmake = 'fhmake:cli'

[tool.poetry.dependencies]
python = "^3.8"
tomlkit = "<2,>=0.11.4"
simplesecurity = {version = "<2024,>=2022", optional = true}
checkrequirements = {version = "<2024,>=2022.0.1", optional = true}
poetry = {version = "<2,>=1.1.14", optional = true}
licensecheck = {version = "<2024,>=2022.1.1", optional = true}
radon = {version = "<6,>=5.1.0", optional = true}
pylint = {version = "<3,>=2.14.5", optional = true}
handsdown = "<3,>=2.0.0"
# If installing fhmake[full] we need flake8-polyfill to prevent flake8 from breaking
flake8-polyfill = {version = "<2,>=1.0.2", optional = true}

[tool.poetry.extras]
full = [
	"simplesecurity",
	"checkrequirements",
	"poetry",
	"licensecheck",
	"fhdoc",
	"radon",
	"pylint",
	"flake8-polyfill",
]

[tool.pylint.basic]
argument-naming-style = "camelCase"
attr-naming-style = "camelCase"
function-naming-style = "camelCase"
method-naming-style = "camelCase"
variable-naming-style = "camelCase"

[tool.pylint.format]
indent-string = "\t"

[tool.pylint.master]
ignore-patterns = "test_.*?py"

[tool.pylint.messages_control]
enable = ["F", "E", "W", "R", "C"]
disable = [
	"pointless-string-statement",
	"superfluous-parens",
	"bad-continuation"
]

[tool.black]
line-length = 100
target-version = ["py37"]

[tool.isort]
profile = "black"
indent = "Tab"

[tool.pydocstyle]
convention = "google"
ignore = "D205,D415"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
